<resources>
    <string name="app_name">Blog2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">about us</string>
    <string name="blog_post">blog page</string>
    <string name="welcome">WELCOME TO BLOG SITE</string>
    <string name="go_back">go back</string>
    <string name="newsletter">newsletter</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="aboutUs_text">About us</string>
    <string name="image_influemcer">Image influemcer</string>
    <string name="write_blog_here">write blog here</string>
    <string name="btn_press_to_blog">start blogging</string>
    <string name="text_title">Your Title</string>
    <string name="title">Title</string>
    <string name="button">Button</string>
    <string name="text_blog_post">Blog post</string>
    <string name="textTitle">Title</string>
    <string name="submit">submit</string>
    <string name="close">close</string>
    <string name="name">Name</string>
    <string name="image_letters">Image letters</string>
    <string name="confirm">Confirm</string>
    <string name="Email" />
    <string name="blog_page">blog page</string>
    <string name="email">Email</string>
</resources>